--- a/homepage.css
+++ b/homepage.css
@@ -1,8 +1,3 @@
-div.main {
-	width: 100%;
-	height: inherit;
-}
-
 a:link {
 	color: black;
 	text-decoration: none;
@@ -65,8 +60,9 @@ body {
 
 table {
 	width: 100%;
-	height: auto;
+	max-width: device-width;
 	text-align: center;
+	max-height: device-height;
 }
 
 footer {
